Added Task List and Footer section

--- a/dash.html
+++ b/dash.html
@@ -18,5 +18,17 @@
         <input type="text" id="taskinput" placeholder="Enter new task..."/>
         <button id="addTaskBtn">Add Task Button</button>
     </section>
+
+    <!--TASK LIST-->
+    <section class="task-list" id="taskList">
+        <!--task will appear here-->
+    </section>
+
+    <!--FOOTER-->
+    <footer class="footer">
+        <p>Built by <strong>Oluwasanmisola Towoju</strong></p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
