Added Body CSS features

--- a/dash.html
+++ b/dash.html
@@ -16,7 +16,7 @@
     <!--TASK INPUT SECTION-->
     <section class="task input">
         <input type="text" id="taskinput" placeholder="Enter new task..."/>
-        <button id="addTaskBtn">Add Task Button</button>
+        <button id="addTaskBtn">Add Task</button>
     </section>
 
     <!--TASK LIST-->
