Added Task Input Features

--- a/dash.html
+++ b/dash.html
@@ -14,7 +14,7 @@
     </header>
 
     <!--TASK INPUT SECTION-->
-    <section class="task input">
+    <section class="task-input">
         <input type="text" id="taskinput" placeholder="Enter new task..."/>
         <button id="addTaskBtn">Add Task</button>
     </section>
