Added Filter HTML and CSS properties & features

--- a/dash.html
+++ b/dash.html
@@ -19,6 +19,13 @@
         <button id="addTaskBtn">Add Task</button>
     </section>
 
+    <!--FILTER BUTTONS-->
+    <section class="filters">
+        <button class="filter-btn active" data-filter="all">All</button>
+        <button class="filter-btn" data-filter="Pending">Pending</button>
+        <button class="filter-btn" data-filter="Completed">Completed</button>
+    </section>
+
     <!--TASK LIST-->
     <section class="task-list" id="taskList">
         <!--task will appear here-->
